--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label class="form-check-label" for="exampleCheck1">Remember my user ID</label>
               </div>
             <div class="d-grid gap-2">
-                <button class="btn" id="btn-color" type="button"><a href="/home.html" class="nav-link">Log In</a></button>
+                <button class="btn" id="btn-color" type="button"><a href="home.html" class="nav-link">Log In</a></button>
               </div>
 
               <a class="nav-link my-2 text-center" id="forgot-password" href="#scrollspyHeading2">Forgot Password?</a>
